[gd_scene load_steps=3 format=3 uid="uid://bivgupagcj6xf"]

[ext_resource type="Script" path="res://UI/InGameUI.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://chpd7ewn37es" path="res://UI/Settings/InGameUISettings.tscn" id="2"]

[node name="InGameUI" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1")

[node name="IngameUIBottom" type="MarginContainer" parent="."]
layout_mode = 1
offset_right = 1600.0
offset_bottom = 46.0
size_flags_horizontal = 3
mouse_filter = 2

[node name="vBoxContainer" type="VBoxContainer" parent="IngameUIBottom"]
layout_mode = 2
mouse_filter = 2

[node name="hBoxHud" type="HBoxContainer" parent="IngameUIBottom/vBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="hBoxUIButtons" type="HBoxContainer" parent="IngameUIBottom/vBoxContainer/hBoxHud"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="buttGameOptions" type="Button" parent="IngameUIBottom/vBoxContainer/hBoxHud/hBoxUIButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Settings"

[node name="buttGameReset" type="Button" parent="IngameUIBottom/vBoxContainer/hBoxHud/hBoxUIButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Restart"

[node name="vBoxContainerGameTimer" type="VBoxContainer" parent="IngameUIBottom/vBoxContainer/hBoxHud"]
layout_mode = 2

[node name="hBoxAngel" type="HBoxContainer" parent="IngameUIBottom/vBoxContainer/hBoxHud/vBoxContainerGameTimer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="label" type="Label" parent="IngameUIBottom/vBoxContainer/hBoxHud/vBoxContainerGameTimer/hBoxAngel"]
layout_mode = 2
size_flags_vertical = 0
text = "Angel:"

[node name="labAngel" type="Label" parent="IngameUIBottom/vBoxContainer/hBoxHud/vBoxContainerGameTimer/hBoxAngel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "123456789"

[node name="hBoxGametimer" type="HBoxContainer" parent="IngameUIBottom/vBoxContainer/hBoxHud/vBoxContainerGameTimer"]
layout_mode = 2

[node name="label" type="Label" parent="IngameUIBottom/vBoxContainer/hBoxHud/vBoxContainerGameTimer/hBoxGametimer"]
layout_mode = 2
text = "Gametime: "

[node name="labelGameTime" type="Label" parent="IngameUIBottom/vBoxContainer/hBoxHud/vBoxContainerGameTimer/hBoxGametimer"]
layout_mode = 2
text = "00:00"

[node name="hBoxPower" type="HBoxContainer" parent="IngameUIBottom/vBoxContainer/hBoxHud"]
layout_mode = 2
size_flags_horizontal = 2
mouse_filter = 2

[node name="label" type="Label" parent="IngameUIBottom/vBoxContainer/hBoxHud/hBoxPower"]
layout_mode = 2
size_flags_vertical = 0
text = "Power:"

[node name="labPower" type="Label" parent="IngameUIBottom/vBoxContainer/hBoxHud/hBoxPower"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "123456789"

[node name="hBoxScore" type="HBoxContainer" parent="IngameUIBottom/vBoxContainer/hBoxHud"]
layout_mode = 2
size_flags_horizontal = 2
mouse_filter = 2

[node name="label" type="Label" parent="IngameUIBottom/vBoxContainer/hBoxHud/hBoxScore"]
layout_mode = 2
size_flags_vertical = 0
text = "Score:"

[node name="labScore" type="Label" parent="IngameUIBottom/vBoxContainer/hBoxHud/hBoxScore"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "123456789"

[node name="vBoxContainerShots" type="VBoxContainer" parent="IngameUIBottom/vBoxContainer/hBoxHud"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="hBoxShots" type="HBoxContainer" parent="IngameUIBottom/vBoxContainer/hBoxHud/vBoxContainerShots"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="label" type="Label" parent="IngameUIBottom/vBoxContainer/hBoxHud/vBoxContainerShots/hBoxShots"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Overall Shots:"

[node name="labShots" type="Label" parent="IngameUIBottom/vBoxContainer/hBoxHud/vBoxContainerShots/hBoxShots"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "123456789"

[node name="hBoxHits" type="HBoxContainer" parent="IngameUIBottom/vBoxContainer/hBoxHud/vBoxContainerShots"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="label" type="Label" parent="IngameUIBottom/vBoxContainer/hBoxHud/vBoxContainerShots/hBoxHits"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Overall Hits:"

[node name="labHits" type="Label" parent="IngameUIBottom/vBoxContainer/hBoxHud/vBoxContainerShots/hBoxHits"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "123456789"

[node name="vBoxContainerPoints" type="VBoxContainer" parent="IngameUIBottom/vBoxContainer/hBoxHud"]
layout_mode = 2
mouse_filter = 2

[node name="hBoxPointsPerShot" type="HBoxContainer" parent="IngameUIBottom/vBoxContainer/hBoxHud/vBoxContainerPoints"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="label" type="Label" parent="IngameUIBottom/vBoxContainer/hBoxHud/vBoxContainerPoints/hBoxPointsPerShot"]
layout_mode = 2
size_flags_vertical = 0
text = "Points per Shot:"

[node name="labPointsPerShots" type="Label" parent="IngameUIBottom/vBoxContainer/hBoxHud/vBoxContainerPoints/hBoxPointsPerShot"]
layout_mode = 2
size_flags_vertical = 0
text = "123456789"

[node name="hBoxPointsPerShot_2" type="HBoxContainer" parent="IngameUIBottom/vBoxContainer/hBoxHud/vBoxContainerPoints"]
layout_mode = 2
size_flags_horizontal = 2
mouse_filter = 2

[node name="label" type="Label" parent="IngameUIBottom/vBoxContainer/hBoxHud/vBoxContainerPoints/hBoxPointsPerShot_2"]
layout_mode = 2
size_flags_vertical = 0
text = "Points per Shot:"

[node name="labPointsPerShots" type="Label" parent="IngameUIBottom/vBoxContainer/hBoxHud/vBoxContainerPoints/hBoxPointsPerShot_2"]
layout_mode = 2
size_flags_vertical = 0
text = "123456789"

[node name="vBoxSettings" parent="IngameUIBottom/vBoxContainer" instance=ExtResource("2")]
visible = false
layout_mode = 2

[connection signal="pressed" from="IngameUIBottom/vBoxContainer/hBoxHud/hBoxUIButtons/buttGameOptions" to="." method="_on_buttGameOptions_pressed"]
[connection signal="pressed" from="IngameUIBottom/vBoxContainer/hBoxHud/hBoxUIButtons/buttGameReset" to="." method="_on_button_pressed"]

[editable path="IngameUIBottom/vBoxContainer/vBoxSettings"]
